--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
+set-option -g pane-active-border-fg blue
 bind-key -n C-S-left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
